fix flicker when adding chip add features

--- a/src/app/chip/chip.component.scss
+++ b/src/app/chip/chip.component.scss
@@ -5,7 +5,9 @@
     width: 700px;
     display: block;
 }
-
+.chiparea{
+    height: 45px;
+}
 /* width */
 ::-webkit-scrollbar {
     height: 5px;
@@ -77,4 +79,25 @@
 
 .igx-drop-down__item ::ng-deep .igx-avatar__image {
     padding: 0.75em;
+}
+
+.emailText{
+    margin: 0px;
+    height: 300px;
+    margin-top: 1.5em;
+    width: 640px;
+    resize: none;
+    line-height: 1em;
+    font-size: 1em;
+    min-width: 0;
+    overflow: visible;
+    font-family: inherit;
+    background: transparent;
+    color: rgba(0, 0, 0, 0.87);
+    outline-style: none;
+    box-shadow: none;
+}
+
+.emailText:focus{
+    cursor: text;
 }
